[project]
name = "gmvae"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distrax>=0.1.5",
    "equinox>=0.12.2",
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
    "optax>=0.2.4",
]

[dependency-groups]
data = ["grain>=0.2.9", "torchvision>=0.22.0"]
utils = ["matplotlib>=3.10.3", "tqdm>=4.67.1", "tyro>=0.9.22", "wandb>=0.19.11"]

[tool.uv]
default-groups = ["data", "utils"]
